icon for collapsed comments and fixed z-index for post meta

--- a/ruqqus/assets/style/main.scss
+++ b/ruqqus/assets/style/main.scss
@@ -1554,6 +1554,7 @@ body {
 
 #thread {
     padding-top: 98px;
+    background-color: $white;
 }
 
 #frontpage {
